Using less plastic

--- a/index.html
+++ b/index.html
@@ -25,8 +25,127 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h1>Using Less Plastic</h1>
+					<h2>Brenton Leanhardt</h1>
+					<h2>August 6th, 2019</h1>
+				</section>
+				<section>
+					<h1>Why bother?</h1>
+				</section>
+				<section>
+					<h1>How?</h1>
+                                        <ul>
+					<li class="fragment">Refuse</li>
+					  <ul>
+                                             <li class="fragment">DIYOGYKTDIFY (DIY or get your kids to do it for you)</li>
+					  </ul>
+					<li class="fragment">Reuse</li>
+                                        </ul>
+
+
+					<aside class="notes">
+						<p>Saying No</p>
+						<p>Amazon, Costco, WF</p>
+						<p>quality source</p>
+						<p>local is easier (OCCP</p>
+					</aside>
+				</section>
+				<section>
+					<h1>Refuse Plastic</h1>
+					<h2 class="fragment">With your food</h2>
+					<aside class="notes">
+						<p>local farmers</p>
+						<p>butcher deli</p>
+						<p>Bulk bins</p>
+						<p>Reusable bags</p>
+						<p>Careful product selection (like milk)</p>
+					</aside>
+				</section>
+				<section>
+					<h2>(Eating out can be tricky)</h2>
+					<aside class="notes">
+						<p>considers bringing a kit</p>
+						<p>kabobi vs GF</p>
+						<p>justsalad, call ahead and be fast</p>
+						<p>Make snacks</p>
+						<p>Leftovers</p>
+					</aside>
+				</section>
+				<section>
+					<h1>Refuse Plastic</h1>
+					<h2>With your body</h2>
+					<aside class="notes">
+						<p>grandparents, used clothing</p>
+						<p>laundry powder</p>
+						<p>shaving, deoderant, dental</p>
+						<p>kids bandaids / diapers</p>
+					</aside>
+				</section>
+				<section>
+					<h1>Refuse Plastic</h1>
+					<h2>With your work</h2>
+					<aside class="notes">
+						<p>bring lunch</p>
+						<p>sickers / shirts</p>
+						<p>low waste catering</p>
+					</aside>
+				</section>
+				<section>
+					<h2>A general note about worthless junk</h2>
+					<aside class="notes">
+						<p>"No thanks" toys</p>
+						<p>free library junk</p>
+						<p>take a picture of information</p>
+					</aside>
+				</section>
+				<section>
+					<h1>Refuse Plastic</h1>
+					<h2>Through DIY</h2>
+					<blockquote class="fragment">
+						&ldquo;I love saving the world and spending my entire paycheck at the same time!&rdquo;  --Nobody Ever
+					</blockquote>
+					<aside class="notes">
+						<p>Zero Waste stores gt DIY</p>
+						<p>bar soap, lotion, deoderant</p>
+						<p>dishwasher detergent, toothpaste</p>
+					</aside>
+				</section>
+				<section>
+					<h1>Reuse Plastic</h1>
+					<h2 class="fragment">With your food</h2>
+					<aside class="notes">
+						<p>Local vendors are more helpful</p>
+						<p>Composting reduces trashs</p>
+						<p>containers reusable (gifts, lunch)</p>
+					</aside>
+				</section>
+				<section>
+					<h1>Reuse Plastic</h1>
+					<h2>With your body</h2>
+					<aside class="notes">
+						<p>Used clothes</p>
+					</aside>
+				</section>
+				<section>
+					<h1>Reuse Plastic</h1>
+					<h2>With your work</h2>
+					<aside class="notes">
+						<p>RHT Post will help you</p>
+					</aside>
+				</section>
+				<section>
+					<h1>Challenges</h1>
+                                        <ul>
+                                        </ul>
+					<aside class="notes">
+						<p>Chasing perfection</p>
+						<p>Business Trips</p>
+						<p>Less onpne shopping</p>
+						<p>Changing yoru wardrobe</p>
+						<p>Plastic behind the scenes</p>
+					</aside>
+				</section>
 			</div>
 		</div>
 
@@ -37,6 +156,7 @@
 			// - https://github.com/hakimel/reveal.js#configuration
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
+				transition: 'none',
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
