--- a/index.html
+++ b/index.html
@@ -34,20 +34,19 @@
 					<h1>Why bother?</h1>
 				</section>
 				<section>
-					<h1>How?</h1>
+					<h1>Let's talk about how!</h1>
                                         <ul>
-					<li class="fragment">Refuse</li>
-					  <ul>
-                                             <li class="fragment">DIYOGYKTDIFY (DIY or get your kids to do it for you)</li>
-					  </ul>
-					<li class="fragment">Reuse</li>
+					<li class="fragment">Refuse and Reuse</li>
+					<li class="fragment">DIYOGYKTDIFY (DIY or get your kids to do it for you)</li>
                                         </ul>
 
 
 					<aside class="notes">
+						<p>Simple in theory</p>
 						<p>Saying No</p>
 						<p>Amazon, Costco, WF</p>
 						<p>quality source</p>
+						<p>themes</p>
 						<p>local is easier (OCCP</p>
 					</aside>
 				</section>
@@ -55,7 +54,7 @@
 					<h1>Refuse Plastic</h1>
 					<h2 class="fragment">With your food</h2>
 					<aside class="notes">
-						<p>local farmers</p>
+						<p>local farmers (nice to meet them)</p>
 						<p>butcher deli</p>
 						<p>Bulk bins</p>
 						<p>Reusable bags</p>
@@ -121,11 +120,16 @@
 					</aside>
 				</section>
 				<section>
+				  <section>
 					<h1>Reuse Plastic</h1>
 					<h2>With your body</h2>
 					<aside class="notes">
 						<p>Used clothes</p>
 					</aside>
+				  </section>
+				  <section>
+					  <img data-src="http://images2.wikia.nocookie.net/__cb20121231170060/simpsons/images/2/2d/Disco_stu_was_talkin_to_you.png">
+				  </section>
 				</section>
 				<section>
 					<h1>Reuse Plastic</h1>
