--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 						<p>considers bringing a kit</p>
 						<p>kabobi vs GF</p>
 						<p>justsalad, call ahead and be fast</p>
-						<p>Make snacks</p>
-						<p>Leftovers</p>
+						<p>snacks for kids / leftovers</p>
 					</aside>
 				</section>
 				<section>
@@ -145,7 +144,7 @@
 					<aside class="notes">
 						<p>Chasing perfection</p>
 						<p>Business Trips</p>
-						<p>Less onpne shopping</p>
+						<p>Less online shopping</p>
 						<p>Changing yoru wardrobe</p>
 						<p>Plastic behind the scenes</p>
 					</aside>
