--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 						<p>Simple in theory</p>
 						<p>Saying No</p>
 						<p>Amazon, Costco, WF</p>
+						<p>local is easier (OCCP)</p>
 						<p>quality source</p>
 						<p>themes</p>
-						<p>local is easier (OCCP</p>
 					</aside>
 				</section>
 				<section>
@@ -85,9 +85,9 @@
 					<h1>Refuse Plastic</h1>
 					<h2>With your work</h2>
 					<aside class="notes">
-						<p>bring lunch</p>
-						<p>sickers / shirts</p>
 						<p>low waste catering</p>
+						<p>bring lunch</p>
+						<p>stickers, pens, shirts</p>
 					</aside>
 				</section>
 				<section>
